--- a/InternTask/resources/css/log.css
+++ b/InternTask/resources/css/log.css
@@ -1,9 +1,194 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
-/* google font */
+html {
+    height: 100vh;
+    /* Set full viewport height */
+    margin: 0;
+
+}
+
+.body {
+    /* background-color: rgb(136, 91, 199); */
+    background-color: #243642;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    /* max-height: 100vh; */
+}
+
+.input-feild {
+    height: 60px;
+    border-radius: 3rem !important;
+
+    text-align: center;
+    color: #243642;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+}
+
+.login-text {
+    margin-bottom: 3.5rem !important;
+    color: #243642;
+}
+
+.login-form form input:focus {
+    text-align: center;
+    color: #243642;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+}
+
+.login-form form input::placeholder {
+    text-align: center;
+    line-height: normal;
+}
+
+.login-content {
+    top: 2rem;
+    right: -11rem;
+    text-align: center;
+    width: 17rem;
+}
+
+.login-form {
+    /* position: absolute;
+    top: 8rem;
+    right: 13rem; */
+    width: 22rem;
+    text-align: center;
+    /* background-color: aqua !important; */
+}
+
+.left-image {
+    z-index: -1;
+    position: absolute;
+    top: 63px;
+    left: 63.3rem;
+    overflow: hidden;
+    height: 40rem;
+
+    /* object-fit: cover; */
+    /* height: fit-content; */
+}
+
+.left-image img {
+    /* transform: rotate(355deg); */
+    /* height: ; */
+    /* object-fit:contain; */
+    /* min-height: 25rem; */
+    background-color: transparent;
+    width: fit-content;
+    /* opacity: 0.8; */
+    width: 27rem;
+    /* filter: grayscale(50%); */
+
+}
+
+
+.poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.white-line {
+    top: 9rem;
+    height: 29rem;
+    width: fit-content;
+    padding: 0;
+    margin: 0;
+    background-color: white;
+    z-index: -2;
+
+}
+
+.logout-btn button {
+
+    text-align: center;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    background-color: #243642;
+    color: white;
+    /* font-size: xx-large; */
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.logout-btn button:hover {
+    background-color: #1a2730;
+    color: white;
+    /* font-size: xx-large; */
+
+
+    /* color: white; */
+    font-weight: 400;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    /* align-content: flex-start; */
+    align-items: center;
+
+}
+
+
+.right-side-page {
+    width: 60% !important;
+}
+
+.right-side-content {
+    margin-top: 17rem !important;
+    width: 100%;
+    padding-left: 1rem !important;
+}
+
+.left-side-content {
+    width: 40% !important;
+}
+
+
+.welcome-text {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-size: 6rem;
+    color: #243642;
+}
+.welcome-breif{
+    color: #243642;
+    font-family: "Poppins", sans-serif;
+    padding-left: 1rem !important;
+    width: 70% !important;
+    font-size: 18px
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 .poppins-regular {
     font-family: "Poppins", sans-serif;
     font-weight: 800;
@@ -32,7 +217,10 @@
       "slnt" 0;
   }
 
-/* login full page content */
+
+
+
+
 .login-page {
     background-color: rgb(138, 180, 183);
     width: 100%;
@@ -45,14 +233,15 @@
 
 
 
-/* left side */
+
+
 .left-side {
     position: relative;
 
 }
 .left-image{
     height: fit-content;
-    /* width: 100px; */
+
     background-color: red;
     overflow: hidden;
     object-fit: cover;
@@ -73,7 +262,7 @@
 
 
 
-/* right side */
+
 .right-side {
     display: flex;
     justify-content: flex-end;
@@ -100,6 +289,7 @@
     left: 2rem;
     color: white;
 }
+ */
 
 
 
@@ -121,15 +311,15 @@
 
 
 
-.body {
-    /* background: aquamarine; */
-    /* color: blue; */
-    /* background-image: url('/public/images/login/bg-light-blue.jpg'); */
-    /* background-image: url('https://as1.ftcdn.net/v2/jpg/03/28/72/96/1000_F_328729628_fBBdOJRIHiXykojm52hGmMdGSSmYVoF0.jpg'); */
-    /* background-position: center; */
-    /* background-repeat: no-repeat; */
-    /* background-size: cover; */
-    /* object-fit: cover; */
-    /* width: 100vh; */
-    height: 100vh;
-}
+/* .body { */
+/* background: aquamarine; */
+/* color: blue; */
+/* background-image: url('/public/images/login/bg-light-blue.jpg'); */
+/* background-image: url('https://as1.ftcdn.net/v2/jpg/03/28/72/96/1000_F_328729628_fBBdOJRIHiXykojm52hGmMdGSSmYVoF0.jpg'); */
+/* background-position: center; */
+/* background-repeat: no-repeat; */
+/* background-size: cover; */
+/* object-fit: cover; */
+/* width: 100vh; */
+/* height: 100vh; */
+/* } */
