--- a/InternTask/resources/css/app.css
+++ b/InternTask/resources/css/app.css
@@ -1,3 +1,29 @@
+* {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+html, body{
+    width: 100% !important;
+}
+
+
+.user-profile{
+    background-color: aquamarine;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+}
+
+.user-profile img{
+    overflow: hidden;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .filled-arrow {
     display: none;
     width: fit-content;
@@ -31,3 +57,4 @@
 .edit-details-content {
     display: none;
 }
+
