change style and functions in create, dashboard, profile pages

--- a/InternTask/resources/css/app.css
+++ b/InternTask/resources/css/app.css
@@ -6,6 +6,8 @@
 html,
 body {
     width: 100% !important;
+    background-color: rgba(222, 222, 222, 0.751) !important;
+
 }
 
 
@@ -14,6 +16,7 @@ body {
     height: 3rem;
     width: 3rem;
     border-radius: 50%;
+
 }
 
 .user-profile img {
@@ -181,101 +184,12 @@ body {
 
 
 /* navbar */
-.navbar-and-profile .nav-item:hover{
-    text-shadow: 0px -1px 15px #ff0000;
-    font-size: 20px;
+.navbar-and-profile .nav-itsm {
+    width: 10rem !important;
 }
 
-/* 
-@keyframes myAnim1 {
-	0% {
-		animation-timing-function: ease-in;
-		opacity: 0;
-		transform: scale(7);
-	}
-
-	38% {
-		animation-timing-function: ease-out;
-		opacity: 1;
-		transform: scale(1);
-	}
-
-	55% {
-		animation-timing-function: ease-in;
-		transform: scale(1.5);
-	}
-
-	72% {
-		animation-timing-function: ease-out;
-		transform: scale(1);
-	}
-
-	81% {
-		animation-timing-function: ease-in;
-		transform: scale(1.24);
-	}
-
-	89% {
-		animation-timing-function: ease-out;
-		transform: scale(1);
-	}
-
-	95% {
-		animation-timing-function: ease-in;
-		transform: scale(1.04);
-	}
-
-	100% {
-		animation-timing-function: ease-out;
-		transform: scale(1);
-	}
-} */
-
-
-/* header .header {
-    animation: header 2s ease 0s 1 normal forwards;
-} */
-
-/* @keyframes header {
-    0% {
-        animation-timing-function: ease-in;
-        opacity: 0;
-        transform: translateX(-250px);
-    }
-
-    38% {
-        animation-timing-function: ease-out;
-        opacity: 1;
-        transform: translateX(0);
-    }
-
-    55% {
-        animation-timing-function: ease-in;
-        transform: translateX(-68px);
-    }
-
-    72% {
-        animation-timing-function: ease-out;
-        transform: translateX(0);
-    }
-
-    81% {
-        animation-timing-function: ease-in;
-        transform: translateX(-28px);
-    }
-
-    90% {
-        animation-timing-function: ease-out;
-        transform: translateX(0);
-    }
-
-    95% {
-        animation-timing-function: ease-in;
-        transform: translateX(-8px);
-    }
-
-    100% {
-        animation-timing-function: ease-out;
-        transform: translateX(0);
-    }
-} */
+.navbar-and-profile .nav-item:hover {
+    text-shadow: 0px -1px 15px #ff0000;
+    font-size: 20px;
+    /* width: 10rem !important; */
+}
