--- a/InternTask/resources/css/create.css
+++ b/InternTask/resources/css/create.css
@@ -1,6 +1,8 @@
 .create-content {
     margin: 3rem !important;
-    animation: myAnim 2s ease 0s 1 normal forwards;
+    /* animation: myAnim 2s ease 0s 1 normal forwards; */
+    /* animation: create 2s cubic-bezier(0.5, 0, 0.75, 0) 0s 1 normal none; */
+    animation: create 2s cubic-bezier(0.5, 0, 0.75, 0) 0s 1 normal none;
 }
 
 .sub-btn button {
@@ -14,10 +16,6 @@
 }
 
 
-/* <!-- HTML !-->
-<button class="button-48" role="button"><span class="text">Button 48</span></button> */
-
-/* CSS */
 .button-48 {
   appearance: none;
   background-color: #FFFFFF;
@@ -114,20 +112,7 @@ input[type="file"] {
 
 }
 
-.profile-image {
-    background-color: aquamarine;
-    height: 5rem;
-    width: 5rem;
-    border-radius: 50%;
-}
-.profile-image img{
-    overflow: hidden;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-}
+
 
 
 
@@ -143,47 +128,14 @@ input[type="file"] {
     margin-bottom: 3rem !important;
     /* animation: myAnim 2s ease 0s 1 normal forwards; */
 }
-
-@keyframes myAnim {
+@keyframes create {
 	0% {
-		animation-timing-function: ease-in;
-		opacity: 0;
-		transform: translateY(-250px);
-	}
-
-	38% {
-		animation-timing-function: ease-out;
-		opacity: 1;
-		transform: translateY(0);
-	}
-
-	55% {
-		animation-timing-function: ease-in;
-		transform: translateY(-65px);
-	}
-
-	72% {
-		animation-timing-function: ease-out;
-		transform: translateY(0);
-	}
-
-	81% {
-		animation-timing-function: ease-in;
-		transform: translateY(-28px);
-	}
-
-	90% {
-		animation-timing-function: ease-out;
-		transform: translateY(0);
-	}
-
-	95% {
-		animation-timing-function: ease-in;
-		transform: translateY(-8px);
+		transform: scale(0.5);
+		transform-origin: 50% 100%;
 	}
 
 	100% {
-		animation-timing-function: ease-out;
-		transform: translateY(0);
+		transform: scale(1);
+		transform-origin: 50% 100%;
 	}
 }
