--- a/InternTask/resources/css/create.css
+++ b/InternTask/resources/css/create.css
@@ -1,22 +1,20 @@
 .create-content {
-    margin: 3rem !important;
-    /* animation: myAnim 2s ease 0s 1 normal forwards; */
-    /* animation: create 2s cubic-bezier(0.5, 0, 0.75, 0) 0s 1 normal none; */
-    animation: create 2s cubic-bezier(0.5, 0, 0.75, 0) 0s 1 normal none;
+  /* margin: 3rem !important; */
+  /* animation: create 2s cubic-bezier(0.5, 0, 0.75, 0) 0s 1 normal none; */
 }
 
 .sub-btn button {
-    margin-top: 0rem !important;
-    width: 7rem !important;
-    height: 2rem;
-    font-size: 15px;
-    font-weight: 500;
-    border-color: transparent;
-    border: transparent;
+  margin-top: 0rem !important;
+  width: 7rem !important;
+  height: 2rem;
+  font-size: 15px;
+  font-weight: 500;
+  border-color: transparent;
+  border: transparent;
 }
 
 
-.button-48 {
+.create-sub-btn {
   appearance: none;
   background-color: #FFFFFF;
   border-width: 0;
@@ -35,7 +33,7 @@
   text-decoration: none;
   text-rendering: geometricprecision;
   text-transform: uppercase;
-  transition: opacity 300ms cubic-bezier(.694, 0, 0.335, 1),background-color 100ms cubic-bezier(.694, 0, 0.335, 1),color 100ms cubic-bezier(.694, 0, 0.335, 1);
+  transition: opacity 300ms cubic-bezier(.694, 0, 0.335, 1), background-color 100ms cubic-bezier(.694, 0, 0.335, 1), color 100ms cubic-bezier(.694, 0, 0.335, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
@@ -43,12 +41,12 @@
   white-space: nowrap;
 }
 
-.button-48:before {
-    
-    border-radius: 5px !important;
+.create-sub-btn:before {
+
+  border-radius: 5px !important;
   animation: opacityFallbackOut .5s step-end forwards;
   backface-visibility: hidden;
-  background-color: rgb(30, 168, 30);
+  background-color: rgb(8, 8, 8);
   clip-path: polygon(-1% 0, 0 0, -25% 100%, -1% 100%);
   content: "";
   height: 100%;
@@ -60,82 +58,61 @@
   width: 100%;
 }
 
-.button-48:hover:before {
-  animation: opacityFallbackIn 0s step-start forwards;
+.create-sub-btn:hover:before {
   clip-path: polygon(0 0, 101% 0, 101% 101%, 0 101%);
 }
 
-.button-48:after {
+.create-sub-btn:after {
   background-color: #FFFFFF;
 }
 
-.button-48 span {
+.create-sub-btn span {
   z-index: 1;
   position: relative;
 }
 
-/*
-.create-form{
-    background: ;
-} */
+
 
 .require-error-message .list-group-item-danger {
-
-    padding-left: 1rem !important;
+  padding-left: 1rem !important;
 }
 
 .create-form input {
-    height: 2.5rem !important;
-    padding-left: 0.5rem !important;
-    padding-right: 0.5rem !important;
-    /* display: flex;
-    align-items: center; */
+  height: 2.5rem !important;
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
 }
 
 
 
 input[type="file"] {
-    height: 2.5rem;
-    line-height: 2.5rem;
-    padding: 0;
-    margin: 0;
-    display: block;
-    cursor: pointer;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  padding: 0;
+  margin: 0;
+  display: block;
+  cursor: pointer;
 }
 
 .create-form select {
-    height: 2.5rem;
-    line-height: 2.5rem;
-    padding-left: 0.5rem !important;
-    display: block;
-    cursor: pointer;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  padding-left: 0.5rem !important;
+  display: block;
+  cursor: pointer;
 
 }
-
-
 
 
 
 
 .poppins-regular-details {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
 }
 
 
-.create-heading{
-    margin-bottom: 3rem !important;
-    /* animation: myAnim 2s ease 0s 1 normal forwards; */
-}
-@keyframes create {
-	0% {
-		transform: scale(0.5);
-		transform-origin: 50% 100%;
-	}
-
-	100% {
-		transform: scale(1);
-		transform-origin: 50% 100%;
-	}
+.create-heading {
+  margin-bottom: 3rem !important;
 }
