--- a/InternTask/resources/css/log.css
+++ b/InternTask/resources/css/log.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0 !important;
-    padding: 0 !important;
-}
 
 html {
     height: 100vh;
@@ -9,7 +5,7 @@ html {
 
 }
 
-.body {
+.log-body {
     /* background-color: rgb(136, 91, 199); */
     background-color: #243642;
     width: 100%;
