--- a/User Management System/resources/css/log.css
+++ b/User Management System/resources/css/log.css
@@ -10,7 +10,7 @@ body {
 .log-body {
     background-color: #243642;
     width: 100%;
-    height: 500px !important;
+    height: 550px !important;
     overflow: hidden;
 }
 
@@ -60,7 +60,8 @@ body {
     z-index: -1;
     position: absolute;
     top: 30px;
-    left: 46.75rem;
+    /* left: 46.75rem; */
+    left: 52.5rem;
     overflow: hidden;
     height: 40rem;
 }
@@ -69,6 +70,7 @@ body {
     background-color: transparent;
     width: fit-content;
     width: 22rem;
+    height: 100% ;
 }
 
 .poppins-regular {
@@ -125,7 +127,7 @@ body {
 }
 
 .welcome-text {
-    font-size: 4.5rem !important;
+    font-size: 5rem !important;
     font-family: "Poppins", sans-serif;
     font-weight: 900;
     color: #243642;
