--- a/User Management System/resources/css/show.css
+++ b/User Management System/resources/css/show.css
@@ -74,3 +74,47 @@ input[type="file"] {
 
 }
 
+
+
+
+.user-details-heading{
+    animation: user-details-heading 800ms ease 0s 1 normal forwards;
+}
+
+.user-details-content-left{
+    animation: user-details-content-left 800ms ease 0s 1 normal forwards;
+}
+
+.user-details-content-right{
+    animation: user-details-content-right 800ms ease 0s 1 normal forwards;
+}
+@keyframes user-details-content-right {
+	0% {
+		transform: translateX(100px);
+	}
+
+	100% {
+		transform: translateX(0);
+	}
+}
+
+
+@keyframes user-details-content-left {
+	0% {
+		transform: translateX(-100px);
+	}
+
+	100% {
+		transform: translateX(0);
+	}
+}
+
+@keyframes user-details-heading {
+	0% {
+		transform: translateY(-100px);
+	}
+
+	100% {
+		transform: translateY(0);
+	}
+}
