create model box on desktop page - render saved data using js only

--- a/User Management System/resources/css/create.css
+++ b/User Management System/resources/css/create.css
@@ -86,8 +86,11 @@
 
 
 input[type="file"] {
+  display: flex;
+  align-items: center;
+  align-content: center;
   height: 2.5rem;
-  line-height: 2.5rem;
+  /* line-height: 2.5rem; */
   padding: 0;
   margin: 0;
   display: block;
